--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,42 @@
-<h1>Hello World!</h1> 
+<h1>Hello World!</h1>
+
+<div class="mdc-card" id="sign-form">
+    <!-- Username -->
+    <label class="mdc-text-field mdc-text-field--outlined">
+        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
+        <span class="mdc-notched-outline">
+            <span class="mdc-notched-outline__leading"></span>
+            <span class="mdc-notched-outline__notch">
+                <span class="mdc-floating-label" id="my-label-id">Username</span>
+            </span>
+            <span class="mdc-notched-outline__trailing"></span>
+        </span>
+    </label>
+
+    <!-- Password -->
+    <label class="mdc-text-field mdc-text-field--outlined">
+        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
+        <span class="mdc-notched-outline">
+            <span class="mdc-notched-outline__leading"></span>
+            <span class="mdc-notched-outline__notch">
+                <span class="mdc-floating-label" id="my-label-id">Password</span>
+            </span>
+            <span class="mdc-notched-outline__trailing"></span>
+        </span>
+    </label>
+
+    <div class="mdc-touch-target-wrapper">
+        <!-- Sign up button-->
+        <button class="mdc-button mdc-button--touch">
+            <div class="mdc-button__ripple"></div>
+            <span class="mdc-button__label">Sign Up</span>
+            <div class="mdc-button__touch"></div>
+        </button>
+
+        <!-- Sign in button-->
+        <button class="mdc-button mdc-button--touch">
+            <div class="mdc-button__ripple"></div>
+            <span class="mdc-button__label">Sign In</span>
+            <div class="mdc-button__touch"></div>
+        </button>
+    </div>
