added signup button features

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -83,7 +83,7 @@
     {{{ body }}}
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="../../public/assets/js/books.js"></script>
+        <script src="../../public/assets/js/homepage.js"></script>
 </body>
 
 </html>
