Search results page skeleton somewhat finished.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,8 @@
-<h1>Hello World!</h1>
+<!--Sign in stuff-->
 
-<div class="mdc-card" id="sign-form">
+<div class="mdc-card" id="sign-form" style="width:75%; margin-left:auto; margin-right:auto;">
     <!-- Username -->
-    <label class="mdc-text-field mdc-text-field--outlined">
+    <label class="mdc-text-field mdc-text-field--outlined" style="margin:20px">
         <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
         <span class="mdc-notched-outline">
             <span class="mdc-notched-outline__leading"></span>
@@ -14,7 +14,7 @@
     </label>
 
     <!-- Password -->
-    <label class="mdc-text-field mdc-text-field--outlined">
+    <label class="mdc-text-field mdc-text-field--outlined" style="margin:20px">
         <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
         <span class="mdc-notched-outline">
             <span class="mdc-notched-outline__leading"></span>
@@ -25,7 +25,7 @@
         </span>
     </label>
 
-    <div class="mdc-touch-target-wrapper">
+    <div class="mdc-touch-target-wrapper" style="margin:auto">
         <!-- Sign up button-->
         <button class="mdc-button mdc-button--touch">
             <div class="mdc-button__ripple"></div>
@@ -40,3 +40,6 @@
             <div class="mdc-button__touch"></div>
         </button>
     </div>
+</div>
+
+<!-- Results page -->
