--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
 
+
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+    <link rel="stylesheet" type="text/css" href="../../public/assets/css/book_style.css">
+    v
 </head>
 
 <body>
-    <header class="mdc-top-app-bar">
+    <header class="mdc-top-app-bar mdc-top-app-bar--fixed" style="margin-right:5px">
         <div class="mdc-top-app-bar__row">
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-                <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
-                    aria-label="Open navigation menu">menu</button>
+                {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
+                    aria-label="Open navigation menu">menu</button> --}}
                 <span class="mdc-top-app-bar__title">Bookshelf</span>
             </section>
 
@@ -34,11 +36,14 @@
                 <label for="another-basic-switch">Dark Mode</label>
 
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                    aria-label="Favorite">favorite</button>
+                    aria-label="Favorites">favorite</button>
+
+                <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                    aria-label="Wishlist">star</button>
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Search">search</button>
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                    aria-label="Person">person</button>
+                    aria-label="Account Circle">account_circle</button>
 
 
                 {{!-- <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
@@ -47,43 +52,10 @@
         </div>
     </header>
 
-    {{!-- <!--Search partial-->
-    <div class="mdc-card demo-card" style="width:50%; height:50%;">
-        <div class="mdc-card__primary-action demo-card__primary-action" tabindex="0">
-            <div class="mdc-card__media mdc-card__media--16-9 demo-card__media"
-                style="background-image: url(&quot;https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg&quot;);">
-            </div>
-            <div class="demo-card__primary">
-                <h2 class="demo-card__title mdc-typography mdc-typography--headline6">Our Changing Planet</h2>
-                <h3 class="demo-card__subtitle mdc-typography mdc-typography--subtitle2">by Kurt Wagner</h3>
-            </div>
-            <div class="demo-card__secondary mdc-typography mdc-typography--body2">Visit ten places on our planet that
-                are undergoing the biggest changes today.</div>
-        </div>
-        <div class="mdc-card__actions">
-            <div class="mdc-card__action-buttons">
-                <button class="mdc-button mdc-card__action mdc-card__action--button"> <span
-                        class="mdc-button__ripple"></span> Read</button>
-                <button class="mdc-button mdc-card__action mdc-card__action--button"> <span
-                        class="mdc-button__ripple"></span> Bookmark</button>
-            </div>
-            <div class="mdc-card__action-icons">
-                <button class="mdc-icon-button mdc-card__action mdc-card__action--icon--unbounded" aria-pressed="false"
-                    aria-label="Add to favorites" title="Add to favorites">
-                    <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
-                    <i class="material-icons mdc-icon-button__icon">favorite_border</i>
-                </button>
-                <button class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
-                    title="Share" data-mdc-ripple-is-unbounded="true">share</button>
-                <button class="mdc-icon-button material-icons mdc-card__action mdc-card__action--icon--unbounded"
-                    title="More options" data-mdc-ripple-is-unbounded="true">more_vert</button>
-            </div>
-        </div>
-    </div> --}}
     {{{ body }}}
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="../../public/assets/js/books.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="../../public/assets/js/books.js"></script>
 </body>
 
 </html>
