added login button, book search button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    
 
 </head>
 
@@ -83,7 +84,8 @@
     {{{ body }}}
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="../../public/assets/js/homepage.js"></script>
+        <script src="/assets/js/homepage.js"></script>
+        <script src="/assets/js/books.js"></script>
 </body>
 
 </html>
