added login button and book search button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>Hello World!</h1>
 
-<div class="mdc-card" id="sign-form">
+<div class="mdc-card" id="sign-form row2">
     <!-- Username -->
     <label class="mdc-text-field mdc-text-field--outlined">
         <input type="text" class="mdc-text-field__input" id="user-input" aria-labelledby="my-label-id">
