added api call and response details to the router and handlebar

--- a/public/assets/css/book_style.css
+++ b/public/assets/css/book_style.css
@@ -2,3 +2,12 @@ body {
     background-color: #E0E0E0;
 }
 
+#sign-form{
+    padding-top: 10%;
+}
+
+#inputText{
+    background-color: rgb(228, 203, 235);
+    margin-left: 5px;
+}
+
