--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,14 +41,11 @@
 
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Wishlist">star</button>
-                <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" id="searchButton"
                     aria-label="Search">search</button>
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Account Circle">account_circle</button>
 
-
-                {{!-- <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                    aria-label="Options">more_vert</button> --}}
             </section>
         </div>
     </header>
