--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,19 +1,66 @@
 <h1>Filler</h1>
 
-<h1>Search Results</h1>
+<div class="mdc-text-field mdc-text-field--outlined" id="inputText">
+  <input class="mdc-text-field__input" id="text-field-hero-input bookSearch">
+  <div class="mdc-notched-outline">
+    <div class="mdc-notched-outline__leading"></div>
+    <div class="mdc-notched-outline__notch">
+      <label for="text-field-hero-input" class="mdc-floating-label">Search Book</label>
+    </div>
+    <div class="mdc-notched-outline__trailing"></div>
+  </div>
+</div>
+
+<h3>Search Results</h3>
+
+<div class="mdc-layout-grid">
+    {{#each books}}
+    <div class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-card--outlined" style="padding:16px; height:350px; width:75%; margin:auto;">
+            <h5>{{this.volumeInfo.title}}</h5>
+            <h6>{{this.volumeInfo.authors}}</h6>
+            <p>{{this.volumeInfo.description}}</p>
+            <a href="{{this.saleInfo.buyLink}}">Buy Book</a>
+            <div class="mdc-card__action-icons">
+            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" 
+                aria-label="Mark as Read">bookmark_border</button>
+            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
+                aria-label="Wishlist">star_border</button>
+            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
+                aria-label="Favorite">favorite_border</button>
+        </div>
+        </div>
+    </div>
+    {{/each}}
+</div>
+
+
+
+
+
+
+
+
+{{!-- ---------------------------------------------------------------
+--------------------------------------------------------------- --}}
+
+
+
+
+{{!-- <h1>Search Results</h1>
 <div class="mdc-card mdc-card--outlined" style="padding:16px; height:350px; width:75%; margin:auto;">
     <div class="mdc-card__primary-action">
         <div class="mdc-card__media mdc-card__media--square">
             <div class="mdc-card__media-content"></div>
-        </div>
+        </div> --}}
         <!-- ... additional primary action content ... -->
-    </div>
+    {{!-- </div>
     <h1>Title</h1>
     <h2>Author</h2>
-    <h3>Description</h3>
+    <h3>Description</h3> --}}
 
 
-    <div class="mdc-card__actions">
+    {{!-- <div class="mdc-card__actions">
         <div class="mdc-card__action-buttons">
             <button class="mdc-button mdc-card__action mdc-card__action--button">
                 <div class="mdc-button__ripple"></div>
@@ -24,10 +71,10 @@
                 <span class="mdc-button__label">Buy Now</span>
             </button>
         </div>
-        <div class="mdc-card__action-icons">
+        <div class="mdc-card__action-icons"> --}}
             {{!-- <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
                 title="Share">share</button> --}}
-            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
+            {{!-- <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
                 aria-label="Mark as Read">bookmark_border</button>
             <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
                 aria-label="Wishlist">star_border</button>
@@ -41,24 +88,24 @@
     <div class="mdc-card__primary-action">
         <div class="mdc-card__media mdc-card__media--square">
             <div class="mdc-card__media-content"></div>
-        </div>
+        </div> --}}
         <!-- ... additional primary action content ... -->
-    </div>
+    {{!-- </div>
     <h1>Title</h1>
     <h2>Author</h2>
     <h3>Description</h3>
 
     <div class="mdc-card__actions">
-        <div class="mdc-card__action-buttons">
+        <div class="mdc-card__action-buttons"> --}}
             {{!-- <button class="mdc-button mdc-card__action mdc-card__action--button">
                 <div class="mdc-button__ripple"></div>
                 <span class="mdc-button__label">Action 1</span>
             </button> --}}
-        </div>
-        <div class="mdc-card__action-icons">
+        {{!-- </div>
+        <div class="mdc-card__action-icons"> --}}
             {{!-- <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
                 title="Share">share</button> --}}
-            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
+            {{!-- <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
                 aria-label="Mark as Read">bookmark_border</button>
             <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon"
                 aria-label="Wishlist">star_border</button>
@@ -66,4 +113,4 @@
                 aria-label="Favorite">favorite_border</button>
         </div>
     </div>
-</div>
+</div> --}}
