--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,22 +34,35 @@
                             role="switch" aria-checked="false" disabled>
                     </div>
                 </div>
+
                 <label for="another-basic-switch">Dark Mode</label>
+
+                <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
+                <input class="mdc-text-field__input" id="text-field-hero-input bookSearch">
+                <div class="mdc-notched-outline">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch">
+                    <label for="text-field-hero-input" class="mdc-floating-label">Search Book</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                </div>
+                </div>
+                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" id="searchButton"
+                    aria-label="Search">search</button>
 
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Favorites">favorite</button>
 
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Wishlist">star</button>
-                <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" id="searchButton"
-                    aria-label="Search">search</button>
+               
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Account Circle">account_circle</button>
 
             </section>
         </div>
     </header>
-
+    
     {{{ body }}}
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
