--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
                 <label for="another-basic-switch">Dark Mode</label>
 
                 <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
-                <input class="mdc-text-field__input" id="text-field-hero-input bookSearch">
+                <input class="mdc-text-field__input booksearch" id="text-field-hero-input">
                 <div class="mdc-notched-outline">
                     <div class="mdc-notched-outline__leading"></div>
                     <div class="mdc-notched-outline__notch">
@@ -47,7 +47,8 @@
                     <div class="mdc-notched-outline__trailing"></div>
                 </div>
                 </div>
-                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" id="searchButton"
+
+                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" id="searchbutton"
                     aria-label="Search">search</button>
 
                 <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
