--- a/views/displaytables.handlebars
+++ b/views/displaytables.handlebars
@@ -7,7 +7,7 @@
                 <tr class="mdc-data-table__header-row">
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Favorite</th>
+                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update</th>
                 </tr>
             </thead>
             <tbody class="mdc-data-table__content">
@@ -17,11 +17,7 @@
                 <tr class="mdc-data-table__row">
                     <td class="mdc-data-table__cell">{{this.title}}</td>
                     <td class="mdc-data-table__cell">{{this.author}}</td>
-                    {{#if favorite }}
-                    <td class="mdc-data-table__cell"><span
-                            class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                            aria-label="Favorites"></span></td>
-                    {{/if}}
+                    <button class="update-btn">Read it!</button>
                 </tr>
                 {{/unless}}
                 {{/each}}
@@ -35,7 +31,7 @@
                 <tr class="mdc-data-table__header-row">
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
                     <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Favorite</th>
+                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update</th>
                 </tr>
             </thead>
             <tbody class="mdc-data-table__content">
@@ -45,11 +41,7 @@
                 <tr class="mdc-data-table__row">
                     <td class="mdc-data-table__cell">{{this.title}}</td>
                     <td class="mdc-data-table__cell">{{this.author}}</td>
-                    {{#if favorite }}
-                    <td class="mdc-data-table__cell"><span
-                            class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                            aria-label="Favorites"></span></td>
-                    {{/if}}
+                    <button class="update-btn">Haven't Read!</button>
                 </tr>
                 {{/if}}
                 {{/each}}
