--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="mdc-top-app-bar mdc-top-app-bar--fixed" style="width:85%;">
+    <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
         <div class="mdc-top-app-bar__row">
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
                 {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
