--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -66,6 +66,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="/assets/js/homepage.js"></script>
         <script src="/assets/js/books.js"></script>
+        <script src="/assets/js/navbar.js"></script>
 
 </body>
 
