--- a/public/assets/css/book_style.css
+++ b/public/assets/css/book_style.css
@@ -14,9 +14,9 @@ body {
     width: 100%;
 }
 
-.tables-title {
+/* .tables-title {
     margin-top: 5em;
-}
+} */
 
 .container-tables {
     display: grid;
@@ -27,7 +27,7 @@ body {
 
 .mdc-data-table {
     /* margin-top: 5em; */
-    padding: 0px 10px;
+    padding: 0px 50px;
     
 }
 
