--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,22 +1,22 @@
 <h3>Search Results</h3>
 
 <div class="mdc-layout-grid">
-    {{#each books}}
+    {{#each books }}
     <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-card--outlined" style="padding:16px; height:350px; width:75%; margin:auto;">
+        <div class="mdc-card mdc-card--outlined">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor perspiciatis atque at, repudiandae consectetur culpa alias obcaecati eos fugiat sequi explicabo tenetur saepe necessitatibus et tempore ipsum qui quod dolorem?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, et magni! Quis a nobis suscipit, consectetur illo numquam? Itaque culpa incidunt laborum nemo ratione, quas repellendus voluptate nulla! Libero, amet.</p>
             <h5>{{@index}}: {{this}}. {{this.volumeInfo.title}}</h5>
             <h6>{{this.volumeInfo.authors}}</h6>
             <p>{{this.volumeInfo.description}}</p>
             <a href="{{this.saleInfo.buyLink}}">Buy Book</a>
             <div class="mdc-card__action-icons">
-                {{!-- {{> add/add-btn}} --}}
-            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" data-id="{{this.index}}"
-                aria-label="Mark as Read">bookmark_border</button>
-            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" data-id="{{this.index}}"
-                aria-label="Wishlist">star_border</button>
-            <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" data-id="{{this.index}}"
-                aria-label="Favorite">favorite_border</button>
-        </div>
+                <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" data-id="{{this.index}}"
+                    aria-label="Mark as Read">bookmark_border</button>
+                <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" data-id="{{this.index}}"
+                    aria-label="Wishlist">star_border</button>
+                <button class="material-icons mdc-icon-button mdc-card__action mdc-card__action--icon" data-id="{{this.index}}"
+                    aria-label="Favorite">favorite_border</button>
+            </div>
         </div>
     </div>
     {{/each}}
