--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,29 @@
 <!--Sign in stuff-->
-
-
-<div class="mdc-card" id="sign-form" style="width:75%; margin-left:auto; margin-right:auto;">
+<div class="mdc-card" id="sign-form" style="max-width:600px; margin-left:auto; margin-right:auto; padding:16px">
 
     <!-- Username -->
+    <h3>Filler</h3>
+    <h2 style="text-align:center">Get Started With Bookshelf!</h2>
+    <h4>Username</h4>
     <label class="mdc-text-field mdc-text-field--outlined">
         <input type="text" class="mdc-text-field__input" id="user-input" aria-labelledby="my-label-id">
         <span class="mdc-notched-outline">
             <span class="mdc-notched-outline__leading"></span>
             <span class="mdc-notched-outline__notch">
-                <span class="mdc-floating-label" id="my-label-id">Username</span>
+                <span class="mdc-floating-label active"></span>
             </span>
             <span class="mdc-notched-outline__trailing"></span>
         </span>
     </label>
 
     <!-- Password -->
+    <h4>Password</h4>
     <label class="mdc-text-field mdc-text-field--outlined">
         <input type="text" class="mdc-text-field__input" id="password-input" aria-labelledby="my-label-id">
         <span class="mdc-notched-outline">
             <span class="mdc-notched-outline__leading"></span>
             <span class="mdc-notched-outline__notch">
-                <span class="mdc-floating-label" id="my-label-id">Password</span>
+                <span class="mdc-floating-label active"></span>
             </span>
             <span class="mdc-notched-outline__trailing"></span>
         </span>
@@ -43,5 +45,7 @@
         </button>
     </div>
 </div>
+
+<p id="signin-error-message">Incorrect username or password!</p>
 
 <!-- Results page -->
