--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,24 +1,25 @@
+<div class="mdc-data-table table2" style="width:50%; margin-left:25%; margin-right:25%">
+    <table class="mdc-data-table__table" aria-label="completed books">
+        <thead>
+            <tr class="mdc-data-table__header-row">
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
+            </tr>
+        </thead>
+        <tbody class="mdc-data-table__content">
+            <h3>filler</h3>
+            <h2 style="text-align:center">Completed Books</h2>
+            {{#each complete }}
+            {{!-- {{#if have_read }}  --}}
+            <tr class="mdc-data-table__row">
+                <td class="mdc-data-table__cell">{{dataValues.title}}</td>
+                <td class="mdc-data-table__cell">{{dataValues.author}}</td>
 
-   <div class="mdc-data-table table2">
-        <table class="mdc-data-table__table" aria-label="completed books">
-            <thead>
-                <tr class="mdc-data-table__header-row">
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
-                </tr>
-            </thead>
-            <tbody class="mdc-data-table__content">
-                <h2>Completed Books</h2>
-                {{#each complete }}
-                {{!-- {{#if have_read }}  --}}
-               <tr class="mdc-data-table__row">
-                    <td class="mdc-data-table__cell">{{this.title}}</td>
-                    <td class="mdc-data-table__cell">{{this.author}}</td>
-                    <td class="mdc-data-table__cell"><button class="update-btn">Haven't Read Yet!</button></td>
-                </tr>
-                {{!-- {{/if}}  --}}
-                {{/each }}
-            </tbody>
-        </table>
-    </div> 
+                <td class="mdc-data-table__cell"><button class="update-btn">Haven't Read Yet!</button></td>
+            </tr>
+            {{!-- {{/if}}  --}}
+            {{/each }}
+        </tbody>
+    </table>
+</div>
