--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,6 +1,6 @@
-<h3>Search Results</h3>
-
 <div class="mdc-layout-grid">
+    <h3>Filler</h3>
+    <h2>Search Results</h2>
     {{#each books }}
     <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-card--outlined">
