--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -1,31 +1,32 @@
-<h1 class="tables-title">{{this.username}}'s Books</h1>
+{{!-- <div class="container-tables"> --}}
+<div class="mdc-data-table table1" style="width:50%; margin-left:25%; margin-right:25%">
+    <table class="mdc-data-table__table" aria-label="wishlist books">
+        <thead>
+            <tr class="mdc-data-table__header-row">
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
+            </tr>
+        </thead>
+        <tbody class="mdc-data-table__content">
+            <h3>Filler</h3>
+            <h2 class="tables-title" style="text-align:center">{{this.username}}'s Wishlist</h2>
+            {{!-- <h2>Book Wishlist</h2> --}}
+            {{#each wish }}
+            {{!-- {{#unless have_read}} --}}
+            <tr class="mdc-data-table__row">
+                <td class="mdc-data-table__cell">{{dataValues.title}}</td>
+                <td class="mdc-data-table__cell">{{dataValues.author}}</td>
 
-<div class="container-tables">
-    <div class="mdc-data-table table1">
-        <table class="mdc-data-table__table" aria-label="wishlist books">
-            <thead>
-                <tr class="mdc-data-table__header-row">
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                    <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
-                </tr>
-            </thead>
-            <tbody class="mdc-data-table__content">
-                 <h2>Book Wishlist</h2>
-                {{#each wish }}
-                {{!-- {{#unless have_read}} --}}
-                <tr class="mdc-data-table__row">
-                    <td class="mdc-data-table__cell">{{this.title}}</td>
-                    <td class="mdc-data-table__cell">{{this.author}}</td>
-                    <td class="mdc-data-table__cell"><button class="update-btn">Read it!</button></td>
-                </tr>
-                {{!-- {{/unless}} --}}
-                {{/each}}
-            </tbody>
-        </table>
-    </div>
+                <td class="mdc-data-table__cell"><button class="update-btn">Read it!</button></td>
+            </tr>
+            {{!-- {{/unless}} --}}
+            {{/each}}
+        </tbody>
+    </table>
+</div>
 
-    {{!-- <div class="mdc-data-table table2">
+{{!-- <div class="mdc-data-table table2">
         <table class="mdc-data-table__table" aria-label="completed books">
             <thead>
                 <tr class="mdc-data-table__header-row">
@@ -38,14 +39,14 @@
                 <h2>Completed Books</h2>
                 {{#each complete }}
                 {{!-- {{#if have_read }} --}}
-                {{!-- <tr class="mdc-data-table__row">
+{{!-- <tr class="mdc-data-table__row">
                     <td class="mdc-data-table__cell">{{this.title}}</td>
                     <td class="mdc-data-table__cell">{{this.author}}</td>
                     <td class="mdc-data-table__cell"><button class="update-btn">Haven't Read!</button></td>
                 </tr>
                 {{!-- {{/if}} --}}
-                {{!-- {{/each}}
+{{!-- {{/each}}
             </tbody>
         </table>
     </div> --}}
-</div>
+{{!-- </div> --}}
