created card for each book

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,7 +48,7 @@
                 </div>
                 </div>
 
-                 <button class="searchButton material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                 <button class="searchbutton material-icons mdc-top-app-bar__action-item mdc-icon-button"
                     aria-label="Search">search</button>
 
                 <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
