--- a/public/assets/css/book_style.css
+++ b/public/assets/css/book_style.css
@@ -58,3 +58,19 @@ body {
     margin-left: 5px;
 }
 
+.newCard{
+    background-color: white;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 10px;
+    border-style: solid;
+    border-color: rgb(37, 7, 46);
+}
+
+.attributes{
+    margin: 5px;
+}
+
+p{
+    font-size: smaller;
+}
