update button works, and no more complete model

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,7 +10,7 @@
         <tbody class="mdc-data-table__content">
             <h3>filler</h3>
             <h2 style="text-align:center">Completed Books</h2>
-            {{#each complete }}
+            {{#each Book }}
             {{#if dataValues.have_read }}  
             <tr class="mdc-data-table__row">
                 <td class="mdc-data-table__cell">{{dataValues.title}}</td>
