--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -11,7 +11,7 @@
         <tbody class="mdc-data-table__content">
             <h3>Filler</h3>
             <h2 class="tables-title" style="text-align:center">Wishlist</h2>
-            {{#each wish }}
+            {{#each Book }}
            {{#unless dataValues.have_read}} 
             <tr class="mdc-data-table__row">
                 <td class="mdc-data-table__cell">{{dataValues.title}}</td>
