restricted nav bar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
 
                 <label for="another-basic-switch">Dark Mode</label>
 
-                <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
+                {{!-- <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
                 <input class="mdc-text-field__input booksearch" id="text-field-hero-input">
                 <div class="mdc-notched-outline">
                     <div class="mdc-notched-outline__leading"></div>
@@ -55,7 +55,7 @@
                     aria-label="Wishlist">star</button>
                
                 <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                    aria-label="Account Circle">account_circle</button>
+                    aria-label="Account Circle">account_circle</button> --}}
 
             </section>
         </div>
