--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,4 +1,49 @@
+<header class="mdc-top-app-bar mdc-top-app-bar--fixed" style="position:fixed">
+    <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+            {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
+                    aria-label="Open navigation menu">menu</button> --}}
+            <span class="mdc-top-app-bar__title">Bookshelf</span>
+        </section>
+
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+            <div class="mdc-switch mdc-switch--disabled">
+                <div class="mdc-switch__track"></div>
+                <div class="mdc-switch__thumb-underlay">
+                    <div class="mdc-switch__thumb"></div>
+                    <input type="checkbox" id="another-basic-switch" class="mdc-switch__native-control" role="switch"
+                        aria-checked="false" disabled>
+                </div>
+            </div>
+
+            <label for="another-basic-switch">Dark Mode</label>
+
+            <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
+                <input class="mdc-text-field__input booksearch" id="text-field-hero-input">
+                <div class="mdc-notched-outline">
+                    <div class="mdc-notched-outline__leading"></div>
+                    <div class="mdc-notched-outline__notch">
+                        <label for="text-field-hero-input" class="mdc-floating-label">Search Book</label>
+                    </div>
+                    <div class="mdc-notched-outline__trailing"></div>
+                </div>
+            </div>
+
+            <button class="searchbutton material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Search">search</button>
+
+            <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Wishlist">star</button>
+
+            <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Account Circle">account_circle</button>
+
+        </section>
+    </div>
+</header>
 <div class="mdc-layout-grid">
+
     <h3>Filler</h3>
     <h2>Search Results</h2>
+
 </div>
