--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,22 @@
 <!--Sign in stuff-->
+<header class="mdc-top-app-bar mdc-top-app-bar--fixed" style="position:fixed">
+    <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+            {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
+                    aria-label="Open navigation menu">menu</button> --}}
+            <span class="mdc-top-app-bar__title">Bookshelf</span>
+        </section>
+
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+            <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Theme">brightness_2</button>
+
+            <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Signout">home</button>
+        </section>
+    </div>
+</header>
+
 <div class="mdc-card" id="sign-form" style="max-width:600px; margin-left:auto; margin-right:auto; padding:16px">
 
     <!-- Username -->
