--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -4,34 +4,12 @@
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             {{!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
                     aria-label="Open navigation menu">menu</button> --}}
-            <span class="mdc-top-app-bar__title">Bookshelf</span>
+            <span class="mdc-top-app-bar__title title-click">Bookshelf</span>
         </section>
 
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-            <div class="mdc-switch mdc-switch--disabled">
-                <div class="mdc-switch__track"></div>
-                <div class="mdc-switch__thumb-underlay">
-                    <div class="mdc-switch__thumb"></div>
-                    <input type="checkbox" id="another-basic-switch" class="mdc-switch__native-control" role="switch"
-                        aria-checked="false" disabled>
-                </div>
-            </div>
-
-            <label for="another-basic-switch">Dark Mode</label>
-
-            {{!-- <div class="mdc-text-field mdc-text-field--outlined" id="inputText">
-                <input class="mdc-text-field__input booksearch" id="text-field-hero-input">
-                <div class="mdc-notched-outline">
-                    <div class="mdc-notched-outline__leading"></div>
-                    <div class="mdc-notched-outline__notch">
-                        <label for="text-field-hero-input" class="mdc-floating-label">Search Book</label>
-                    </div>
-                    <div class="mdc-notched-outline__trailing"></div>
-                </div>
-            </div>
-
-            <button class="searchbutton material-icons mdc-top-app-bar__action-item mdc-icon-button"
-                aria-label="Search">search</button> --}}
+            <button class="theme-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Theme">brightness_2</button>
 
             <button class="wishlist-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
                 aria-label="Wishlist">star</button>
@@ -39,12 +17,15 @@
             <button class="profile-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
                 aria-label="Account Circle">account_circle</button>
 
+            <button class="signout-nav material-icons mdc-top-app-bar__action-item mdc-icon-button"
+                aria-label="Signout">home</button>
+
         </section>
     </div>
 </header>
 
 
-<div class="mdc-data-table table1" style="width:50%; margin-left:25%; margin-right:25%">
+<div class="mdc-data-table" id="table1" style="width:50%; margin-left:25%; margin-right:25%">
     <table class="mdc-data-table__table" aria-label="wishlist books">
         <thead>
             <tr class="mdc-data-table__header-row">
@@ -57,14 +38,14 @@
             <h3>Filler</h3>
             <h2 class="tables-title" style="text-align:center">Wishlist</h2>
             {{#each Book }}
-           {{#unless dataValues.have_read}} 
+            {{#unless dataValues.have_read}}
             <tr class="mdc-data-table__row">
                 <td class="mdc-data-table__cell">{{dataValues.title}}</td>
                 <td class="mdc-data-table__cell">{{dataValues.author}}</td>
-                <td class="mdc-data-table__cell"><button type="button" class="update-read-btn" 
-                data-id="{{dataValues.id}}" data-readstatus="{{read}}">Read it!</button></td>   
+                <td class="mdc-data-table__cell"><button type="button" class="update-read-btn"
+                        data-id="{{dataValues.id}}" data-readstatus="{{read}}">Read it!</button></td>
             </tr>
-           {{/unless}} 
+            {{/unless}}
             {{/each}}
         </tbody>
     </table>
