--- a/views/wishlist.handlebars
+++ b/views/wishlist.handlebars
@@ -25,25 +25,25 @@
 </header>
 
 
-<div class="mdc-data-table" id="table1" style="width:50%; margin-left:25%; margin-right:25%">
-    <table class="mdc-data-table__table" aria-label="wishlist books">
+<div class="mdc-data-table" id="table1" style="width:75%; margin-left:11%; margin-right:10%">
+    <table class="mdc-data-table__table" aria-label="wishlist books" style="font-family:'Courier New', Courier, monospace;">
         <thead>
             <tr class="mdc-data-table__header-row">
                 <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Title</th>
                 <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Author</th>
-                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Update Read Status</th>
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col" style="width: fit-content;">Update Read Status</th>
             </tr>
         </thead>
         <tbody class="mdc-data-table__content">
             <h3>Filler</h3>
-            <h2 class="tables-title" style="text-align:center">Wishlist</h2>
+            <h2 class="tables-title" style="text-align:center; color: indigo;">Wishlist</h2>
             {{#each Book }}
             {{#unless dataValues.have_read}}
             <tr class="mdc-data-table__row">
                 <td class="mdc-data-table__cell">{{dataValues.title}}</td>
-                <td class="mdc-data-table__cell">{{dataValues.author}}</td>
+                <td class="mdc-data-table__cell" style="width: 10px;">{{dataValues.author}}</td>
                 <td class="mdc-data-table__cell"><button type="button" class="update-read-btn"
-                        data-id="{{dataValues.id}}" data-readstatus="{{read}}">Read it!</button></td>
+                        data-id="{{dataValues.id}}" data-readstatus="{{read}}">I Read It!</button></td>
             </tr>
             {{/unless}}
             {{/each}}
